--- a/app/src/main/res/layout/bookmark_list.xml
+++ b/app/src/main/res/layout/bookmark_list.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/deleteBtnList"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/delete_icon"
+                android:src="@drawable/edit_icon"
                 android:layout_marginVertical="30dp"
                 android:tint="@color/green"
                 tools:ignore="UseAppTint" />
