--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -8,4 +8,12 @@
         android:visible="true"
         app:showAsAction="always"
         android:title="delete" />
+
+    <item
+        android:id="@+id/backBtn"
+        android:enabled="true"
+        android:icon="@drawable/back_icon"
+        android:visible="true"
+        app:showAsAction="always"
+        android:title="back" />
 </menu>
