--- a/app/src/main/res/layout/bookmark_list.xml
+++ b/app/src/main/res/layout/bookmark_list.xml
@@ -53,7 +53,7 @@
                 tools:ignore="UseAppTint" />
 
             <ImageView
-                android:id="@+id/deleteBtnList"
+                android:id="@+id/editBtnList"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/edit_icon"
